--- a/proxy/server/BUILD.bazel
+++ b/proxy/server/BUILD.bazel
@@ -83,9 +83,9 @@ cc_library(
 )
 
 cc_binary(
-    name = "main",
+    name = "demo",
     srcs = [
-        "main.cpp",
+        "demo.cpp",
     ],
     visibility = ["//compdb-proxy:__pkg__"],
     deps = [
