Integrate upstream changes (restart io_context.run() on exception).

--- a/proxy/server/BUILD.bazel
+++ b/proxy/server/BUILD.bazel
@@ -81,6 +81,7 @@ cc_library(
         ":connection_manager",
         "//proxy/cert:certificate_generator",
         "//proxy/cert:rsa_maker",
+        "//proxy/logging",
         "@boost//:asio_ssl",
     ],
 )
